@@ -1,3 +1,11 @@
+drkns 11.09.2016 04:28:53 +0200 - build 4786
+
+1. 0003294: Пустая строка комбобокса
+
+2. Уточнение обработки DIF_EDITOR в диалогах.
+
+3. Пара мелочей.
+
 drkns 09.09.2016 23:40:13 +0200 - build 4785
 
 1. После 4778 криво работал WindowMode.
